--- a/burger.html
+++ b/burger.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        Заголовок
+        Р—Р°РіРѕР»РѕРІРѕРє
     </div>
     <div class="menu__icon">
       <span></span>
