--- a/burger.html
+++ b/burger.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0, width=device-width">
-    <link rel="stylesheet" href="./burger_style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 <body>
     <div class="header">
-        Заголовок
+        Р—Р°РіРѕР»РѕРІРѕРє
     </div>
     <div class="menu__icon">
       <span></span>
